# yarl

./: .clang-format  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.md  config.mk
docs/: index.html
docs/api/estimation/: estimation.md
docs/api/kinematics/: kinematics.md
docs/api/optimization/: optimization.md
docs/api/optimization/ceres/: ceres_examples.md
docs/api/utils/: config.md  data.md  filesystem.md  logging.md  math.md  time.md  utils.md
docs/flight_stack_docs/: README.md  checklist.md  index.html  sidebar.md
docs/flight_stack_docs/api/: i2c.md  mpu6050.md
docs/flight_stack_docs/ref/: components.md  pid.md  reference.md
docs/flight_stack_docs/ref/MPU6050/: mpu6050.md
docs/tutorials/optimizers/: ceres_tutorial.md
examples/: CMakeLists.txt
examples/gp/: CMakeLists.txt  gp_example.cpp
examples/gp/config/: config.xml
include/battery/: battery_test.hpp
include/battery/estimation/: ekf.hpp  kf.hpp  pf.hpp
include/battery/kinematics/: quadrotor.hpp  twowheel.hpp
include/battery/optimization/: benchmark.hpp  optimization.hpp  testcase.hpp
include/battery/optimization/ceres/: ba.hpp  extensions.hpp
include/battery/optimization/optimizers/: gd.hpp  lls.hpp  lma.hpp  ransac.hpp
include/battery/utils/: config.hpp  data.hpp  filesystem.hpp  logging.hpp  math.hpp  munit.hpp  opencv.hpp  stats.hpp  time.hpp  utils.hpp
include/battery/vision/: calibration.hpp  camera.hpp  chessboard.hpp  eight_point.hpp  fast.hpp  good.hpp  orb.hpp  sfm.hpp  utils.hpp  vision.hpp  vo.hpp
include/yarl/: test.hpp  yarl_test.hpp
include/yarl/control/: pid.hpp
include/yarl/control/gimbal/: attitude.hpp
include/yarl/control/quadrotor/: attitude.hpp  attitude_controller.hpp  landing.hpp  position.hpp  position_controller.hpp  tracking.hpp  velocity.hpp
include/yarl/drivers/: i2c.hpp  mpu6050.hpp  mpu9250.hpp  pca9685.hpp  sbgc.hpp  uart.hpp
include/yarl/estimation/: ekf.hpp  kf.hpp  pf.hpp
include/yarl/kinematics/: quadrotor.hpp  twowheel.hpp
include/yarl/models/: gimbal.hpp  quadrotor.hpp  two_wheel.hpp
include/yarl/optimization/: benchmark.hpp  factor_graph.hpp  optimization.hpp  testcase.hpp
include/yarl/optimization/ceres/: ba.hpp  ceres_examples.hpp  extensions.hpp
include/yarl/optimization/factor_graph/: factor.hpp  factor_graph.hpp  graph.hpp  variable.hpp
include/yarl/optimization/gp/: crossover.hpp  data.hpp  gpdata.hpp  gpmetric.hpp  gpopt.hpp  gptree.hpp  metric.hpp  mutation.hpp  node.hpp  population.hpp  selection.hpp  tree.hpp
include/yarl/optimization/optimizers/: gd.hpp  gdopt.hpp  lls.hpp  llsopt.hpp  lma.hpp  lmaopt.hpp  ransac.hpp
include/yarl/utils/: config.hpp  data.hpp  file.hpp  filesystem.hpp  log.hpp  math.hpp  munit.hpp  opencv.hpp  stats.hpp  string.hpp  time.hpp  utils.hpp
include/yarl/vision/: calibration.hpp  camera.hpp  chessboard.hpp  dataset.hpp  eight_point.hpp  fast.hpp  good.hpp  models.hpp  sfm.hpp  utils.hpp  vision.hpp  vo.hpp
include/yarl/vision/camera/: ximea.hpp
scripts/: api.py  ci_run.bash  sync_docs.bash
scripts/install/: ceres_install.bash  gtest_install.bash  install.bash  install_deps.bash  libxml2_install.bash  opencv3_install.bash
scripts/plot/: plot_2d_data.py  plot_3d.py  plot_3d_data.py
src/: CMakeLists.txt  Makefile
src/control/: pid.cpp
src/control/gimbal/: attitude.cpp  attitude_controller.cpp
src/control/quadrotor/: attitude.cpp  attitude_controller.cpp  landing.cpp  position.cpp  position_controller.cpp  tracking.cpp  velocity.cpp
src/drivers/: i2c.cpp  mpu6050.cpp  mpu9250.cpp  pca9685.cpp  sbgc.cpp  uart.cpp
src/estimation/: Makefile  ekf.cpp  kf.cpp  pf.cpp
src/kinematics/: quadrotor.cpp  twowheel.cpp
src/models/: gimbal.cpp  quadrotor.cpp  two_wheel.cpp
src/optimization/: benchmark.cpp  factor_graph.cpp  testcase.cpp
src/optimization/ceres/: ba.cpp  ceres_examples.cpp
src/optimization/factor_graph/: factor_graph.cpp
src/optimization/gp/: crossover.cpp  data.cpp  gpdata.cpp  gpmetric.cpp  gpopt.cpp  gptree.cpp  metric.cpp  mutation.cpp  node.cpp  population.cpp  selection.cpp  tree.cpp
src/optimization/optimizers/: gd.cpp  gdopt.cpp  lls.cpp  llsopt.cpp  lma.cpp  lmaopt.cpp  ransac.cpp
src/utils/: config.cpp  data.cpp  file.cpp  filesystem.cpp  math.cpp  opencv.cpp  stats.cpp  string.cpp  time.cpp
src/vision/: calibration.cpp  camera.cpp  chessboard.cpp  dataset.cpp  eight_point.cpp  fast.cpp  good.cpp  models.cpp  orb.cpp  sfm.cpp  utils.cpp  vo.cpp
src/vision/camera/: camera.cpp  pointgrey.cpp  ximea.cpp
tests/: CMakeLists.txt  Makefile  test_runner.cpp
tests/control/: pid_test.cpp
tests/control/gimbal/: attitude_test.cpp
tests/control/quadrotor/: landing_test.cpp  position_test.cpp  tracking_test.cpp  velocity_test.cpp
tests/data/optimization/gp/: circle.csv  config.xml  elliptic.csv  implicit.csv  polynomial.csv  simple.csv  sine.csv
tests/data/utils/: config.xml
tests/data/vision/dataset/: vo_test.xml
tests/models/: gimbal_test.cpp  quadrotor_test.cpp
tests/optimization/: factor_graph_test.cpp  testcase_test.cpp
tests/optimization/ceres/: ba_test.cpp  ceres_examples_test.cpp
tests/optimization/factor_graph/: factor_graph_test.cpp  factor_test.cpp  graph_test.cpp  variable_test.cpp
tests/optimization/gp/: crossover_test.cpp  data_test.cpp  gpdata_test.cpp  gpopt_test.cpp  mutation_test.cpp  node_test.cpp  population_test.cpp  selection_test.cpp  tree_test.cpp
tests/optimization/optimizers/: gd_test.cpp  gdopt_test.cpp  lls_test.cpp  llsopt_test.cpp  lma_test.cpp  lmaopt_test.cpp  ransac_test.cpp
tests/utils/: config_test.cpp  data_test.cpp  file_test.cpp  filesystem_test.cpp  math_test.cpp  opencv_test.cpp  stats_test.cpp  time_test.cpp
tests/vision/: calibration_test.cpp  camera_test.cpp  chessboard_test.cpp  dataset_test.cpp  eight_point_test.cpp  models_test.cpp  sfm_test.cpp  utils_test.cpp  vo_test.cpp
tools/: CMakeLists.txt
tools/vision/: calibration.cpp  feature_demo.cpp  optical_flow.cpp  video_capture.cpp
